[package]
name = "controller"
version = "0.1.0"
edition = "2021"
default-run = "controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[net]
git-fetch-with-cli = true

[dependencies]
log = "0.4.20"
rbfrt = { version = "0.1.9", features = ["thrift-support"] }
simple-logging = "2.0.2"
tokio = "1.33.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
macaddr = "1.0.1"
env_logger = "0.11.8"
libc = "0.2.178"

[[bin]]
name = "evaluate_ternary_entries"
path = "src/bin/evaluate_ternary_entries.rs"
